# KI-Spielwiese

./: .gitignore  LICENSE  README.md  clip-classifier.ipynb  llama-api.ipynb  nn_raw_basics.ipynb  pyproject.toml  tokeinzer_exercise.ipynb  tokenizer_exercise.py  tokenizer_interactions.ipynb  tool_call_claude.ipynb  trigram_name_prediction.ipynb  txt-classifier.ipynb
