[tool.poetry]
name = "ml-exercises"
version = "0.1.0"
description = ""
authors = ["nsultova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
ipython = "^8.20.0"
ipykernel = "^6.29.0"
numpy = "^1.26.3"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
