[tool.poetry]
name = "ml-exercises"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.12.25"
tiktoken = "^0.6.0"
ipython = "^8.22.1"
pytest = "^8.0.2"
transformers = "^4.38.1"
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
